# rove-ui

./: .gitignore  CMakeLists.txt  README.md  README_LAYOUTS.md  TODO.md  build_windows.cmd  build_windows.ps1  launch.sh  package.xml  requirements.txt  run.sh  widget.py
config/: README.md  config.json  config_window1.json  config_window2.json  readme.md
examples/: README.md  config_with_layouts.json
mock/: mock.sh
mock/scripts/: mock_flipper_joints.py  mock_udp_server.py
mock/server/: Dockerfile  compile_protos.sh  docker-compose.yml  requirements.txt  server.py
mock/server/proto_gen/proto/: Battery_pb2.py  DriveNodeState_pb2.py  RoveControl_pb2.py  RoveTelemetry_pb2.py
mock/server/proto_gen/proto/core/: JointState_pb2.py  Orientation_pb2.py  Position_pb2.py  Vector3_pb2.py
mock/server/proto_gen/proto/imu/: Icm40609_pb2.py  Vn300_pb2.py
proto/: Battery.proto  DriveNodeState.proto  RoveControl.proto  RoveTelemetry.proto
proto/core/: JointState.proto  Orientation.proto  Position.proto  Vector3.proto
proto/imu/: Icm40609.proto  Vn300.proto
scripts/: generate_proto.sh
src/: main.cpp
src/adapters/: ros_node.cpp  ros_node.h
src/clients/: README.md  proto_decoder.py  ros2_client.py  udp_client.py
src/controller/: INPUT_MANAGEMENT.md  event_bus.py  input_manager.py
src/core/: config_manager.cpp  config_manager.h
src/media/rove_urdf/: rove.urdf
src/media/rove_urdf/meshes/: ASection.glb  BSection.glb  Base.glb  Core.glb  DrumBL.glb  DrumBR.glb  DrumFL.glb  DrumFR.glb  FlipperBL.glb  FlipperBR_2.glb  FlipperFL.glb  FlipperFR.glb  JointA.glb  JointB.glb  JointGripper.glb  cage.glb  chinese_camera_5.glb  dji_mid360.glb  pole.glb  vn300_vectornav.glb
src/model/: log_status.py
src/proto_gen/proto/: Battery_pb2.py  DriveNodeState_pb2.py  RoveTelemetry_pb2.py
src/proto_gen/proto/core/: JointState_pb2.py  Orientation_pb2.py  Position_pb2.py  Vector3_pb2.py
src/proto_gen/proto/imu/: Icm40609_pb2.py  Vn300_pb2.py
src/ui/: capra_ui.cpp  capra_ui.h  capra_ui.ui  config_dialog.cpp  config_dialog.h
src/views/: camera_view.py  camera_widget.py  console_view.py  layout_panel.cpp  layout_panel.h  layout_pannel.py  map_viewer.cpp  map_viewer.h  pointcloud_viewer.cpp  pointcloud_viewer.h  rtsp_view.py  rtsp_viewer.cpp  rtsp_viewer.h  web_camera_view.py  web_page.cpp  web_page.h
src/views/components/: bitmap.py  bitmap_placeholder.py  chart.py  header.py  map.py  map_widget.py  nav_bar.py  table.py  threejsViewer.py  urdf_viewer.py
src/views/components/html/: map.html  threejsViewer.html  urdfViewer.html
tests/: CMakeLists.txt
